<resources>
    <string name="app_name">BookSharingApp</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="book_list">Book List</string>
    <string name="fingerprint_authentication">Fingerprint</string>

    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="password2">Re-enter your password</string>
    <string name="create_account_location">Enter your location</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="user_name">Username</string>
    <string name="about_myself">About myself</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="add_post">Write post</string>
    <string name="user_post">Post</string>
    <string name="post_it_button">Post it!</string>
    <string name="post_text">Whats on your mind about books?</string>


    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password_reset_email">Send Password Reset Email</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search_here">Search here..</string>
    <string name="send_frd_request">Add Friend</string>
    <string name="decline_frd_request">Decline Request</string>
    <string name="user_post_description">User Post Description</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="unfriend_request">Unfriend</string>
    <string name="friends_list">Friend\'s List</string>
    <string name="user_write_message_text">Write your message here..</string>
    <string name="receiver_text">receiver text</string>
    <string name="sender_text">sender text</string>
    <string name="messages">\'s Messages</string>
    <string name="books_read">Books Read</string>
    <string name="books_share">Books Share</string>
    <string name="books_read_coll">Books Read Collection</string>
    <string name="books_share_coll">Books Share Collection</string>
    <string name="edit"><u>Edit</u></string>
    <string name="User_email">Email</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="zero">0</string>
    <string name="location">Location</string>
    <string name="enter_location"><i>Enter your location</i></string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="book">Your Books Collection</string>
    <string name="add_book">Add books</string>
    <string name="add">Add</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="search_book"><i>Search any Book here</i></string>
    <string name="no_internet">NO INTERNET</string>
    <string name="google_books_text">Add books using Google Books API</string>
    <string name="no_data"><b>NO DATA</b></string>
    <string name="no_book"><b>NO BOOKS</b></string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="by">by</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_location">Set Location</string>
    <string name="search_location">Search Location</string>
    <string name="search_books_navig">Search Books</string>
    <string name="has_this_book">has this book</string>
    <string name="distance">0.0</string>
    <string name="send_message">Send Message</string>
    <string name="default_images">Add default background images</string>
    <string name="add_images_toPost">Add images to your post</string>
</resources>