<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item android:id="@+id/friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends"/>
    <item android:id="@+id/find_friends"
        android:icon="@drawable/ic_find_friends"
        android:title="@string/find_friends"/>
    <item android:id="@+id/books_collection"
          android:icon="@drawable/book"
        android:title="@string/book"/>
    <item android:id="@+id/message"
        android:icon="@drawable/ic_message"
        android:title="@string/message"/>
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings"/>
    <item android:id="@+id/signout"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/logout"/>

</menu>