<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        tools:targetApi="o"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_password"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        tools:targetApi="o"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:text="@string/show_password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPurple"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:focusable="true" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:layout_toEndOf="@id/forgot_password"
        android:textColor="@android:color/white"
        android:text="@string/create_account" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp" />

    <ImageButton
        android:id="@+id/fingerprint_authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_button"
        android:layout_marginStart="191dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="173dp"
        android:background="@color/colorWhite"
        android:src="@drawable/ic_fingerprint" />

</RelativeLayout>