<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrey"
    android:layout_margin="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_profile"
        android:id="@+id/search_profile_image"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:id="@+id/search_profile_name"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:textAlignment="textStart"
            android:textSize="13sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/has_this_book_id"
                android:text="@string/has_this_book"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/cantarell_italic"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/distance_id"
                android:text="@string/distance"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:textSize="13sp"/>
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/send_message"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>