<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/current_password"
        app:endIconTint="@color/colorAccent"
        android:layout_marginTop="50dp"
        app:endIconMode="password_toggle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginTop="110dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/new_password"
        app:endIconTint="@color/colorAccent"
        android:layout_marginTop="140dp"
        app:endIconMode="password_toggle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/retype_new_password"
        app:endIconTint="@color/colorAccent"
        android:layout_marginTop="200dp"
        app:endIconMode="password_toggle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/colorLightBlue"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/save_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_password_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/colorGrey"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/cancel_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</RelativeLayout>