<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="3dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_profile"
                android:id="@+id/all_user_post_profile_image"
                android:scaleType="centerCrop"
                android:layout_marginStart="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/all_user_post_name"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:textAlignment="textStart"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/user_name"
                            android:textColor="@color/colorPurple"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:id="@+id/all_user_post_date"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:textAlignment="textStart"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#000000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:id="@+id/all_user_post_time"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:textAlignment="textStart"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#000000"/>
                        </LinearLayout>
                    </LinearLayout>
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_post_description"
        android:layout_margin="5dp"
        android:id="@+id/all_user_post_text"
        android:padding="3dp"
        android:textSize="14sp"
        android:textColor="#000000"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:id="@+id/all_users_post_image"/>
</LinearLayout>