<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:layout_width="match_parent"
    tools:context=".user_post_activity">

    <RelativeLayout
        android:id="@+id/top_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_profile"
        android:id="@+id/profile_image"
        android:scaleType="centerCrop"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorWhite"
        android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/user_post_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/has_this_book"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:inputType="textMultiLine"
            android:layout_toEndOf="@id/profile_image"
            android:cursorVisible="true"
            android:textSize="14sp" />
        <requestFocus/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/user_post_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/top_relative_layout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop" />


    <RelativeLayout
        android:id="@+id/relative_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/add_post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_images_toPost"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:paddingStart="30dp"
            android:paddingEnd="5dp"/>

        <ImageButton
            android:id="@+id/camera_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_post_camera"
            android:background="@color/colorBlack"
            android:contentDescription="@string/image"
            android:layout_toStartOf="@+id/gallery_image"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"/>

        <ImageButton
            android:id="@+id/gallery_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image"
            android:background="@color/colorBlack"
            android:src="@drawable/ic_post_image"/>
    </RelativeLayout>
</RelativeLayout>
